samples/_failures_safe/1761422957_f61396_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32a17bed.c: In function ‘main’:
./samples/SAFE/__tmp_32a17bed.c:165:13: error: expected expression at end of input
  165 |             case
      |             ^~~~
./samples/SAFE/__tmp_32a17bed.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32a17bed.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32a17bed.c:165:13: error: expected declaration or statement at end of input
